feat: 优化ai生成模拟数据逻辑，清洗输入数据，限制输出JSON格式

--- a/sidebar.html
+++ b/sidebar.html
@@ -62,7 +62,7 @@
                 </div>
                 
                 <div class="form-actions">
-                    <button type="submit">生成模拟</button>
+                    <button id="submitMockBtn" type="submit">生成模拟</button>
                     <button type="button" id="aiMockBtn" disabled>AI 生成模拟</button>
                 </div>
             </form>
