--- a/sidebar.html
+++ b/sidebar.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>API 模拟管理器</h1>
+        <div class="header-section">
+            <h1>
+                API 模拟管理器
+                <button id="viewReadmeBtn" class="view-readme-btn" title="查看使用手册">
+                    ?
+                </button>
+            </h1>
+        </div>
         
         <!-- 新建模拟表单 -->
         <div class="form-section">
