--- a/sidebar.html
+++ b/sidebar.html
@@ -105,14 +105,14 @@
                 <div class="icon-controls">
                     <div class="har-import">
                         <button id="harImportBtn" class="har-import-icon" title="导入HAR">
-                            <img src="icons/导入HAR.png" alt="导入HAR" width="24" height="24">
+                            <img src="images/icons/导入HAR.png" alt="导入HAR" width="24" height="24">
                         </button>
                         <input type="file" id="harFileInput" accept=".har" style="display: none;">
                     </div>
                     
                     <div class="delete-all">
                         <button id="deleteAllMocksBtn" class="delete-all-icon" title="删除全部">
-                            <img src="icons/删除.png" alt="删除全部" width="24" height="24">
+                            <img src="images/icons/删除.png" alt="删除全部" width="24" height="24">
                         </button>
                     </div>
                 </div>
